# bakery

./: .gitignore  README.md  pyproject.toml
script/: create_hook.sh  pre-push.sh  proj_setup.sh
src/: app.py  db.py  logger.py  tables.py
test/: test_db.py  test_endpoint.py
