[tool.poetry]
name = "code"
version = "0.1.0"
description = "zadanko"
authors = ["Wlass <woj.lass@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
flask = "^2.2.2"
sqlalchemy = "^1.4.41"
psycopg2-binary = "^2.9.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
black = "^22.10.0"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
